--- a/thanks/index.html
+++ b/thanks/index.html
@@ -5,8 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Illdy</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-      <link rel="stylesheet" href="../main.css" />
-      <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon-32x32.png" />
+      <link rel="stylesheet" href="./main.css" />
+      <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon-32x32.png" />
       <script src="app.js" defer></script>
    </head>
    <body>
@@ -16,7 +16,7 @@
                <h2>Message Sent</h2>
                <p>Thanks for contacting us! We'll get back to you as soon as possible.</p>
             </div>
-            <a href="http://127.0.0.1:5500/#contacts" target="project" class="btn" style="border: none">
+            <a href="https://jos3ph1205.github.io/illdy/#contact" target="project" class="btn" style="border: none">
                <span class="icon"><i class="fa-solid fa-chevron-left"></i></span>
                <span>Home</span>
             </a>
