--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                </button>
                <input type="hidden" name="_captcha" value="false" />
                <input type="text" name="_honey" style="display: none" />
-               <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks" />
+               <input type="hidden" name="_next" value="https://jos3ph1205.github.io/illdy/thanks" />
             </form>
          </section>
          <footer class="main-padding">
