--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
             <a class="" href="#team">Our Team</a>
             <a class="" href="#contact">Contact</a>
          </div>
+         <div class="mob-menu-tog">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+         </div>
       </nav>
+      <div class="mobile-menu">
+         <div class="nav-links">
+            <a class="mob-menu-tog active" href="#home">Home</a>
+            <a class="mob-menu-tog" href="#about">About</a>
+            <a class="mob-menu-tog" href="#projects">Projects</a>
+            <a class="mob-menu-tog" href="#testimonials">Testimonials</a>
+            <a class="mob-menu-tog" href="#services">Services</a>
+            <a class="mob-menu-tog" href="#blog">Blog</a>
+            <a class="mob-menu-tog" href="#team">Our Team</a>
+            <a class="mob-menu-tog" href="#contact">Contact</a>
+         </div>
+      </div>
       <div class="noise"></div>
       <main>
          <section class="main-padding" id="home">
@@ -347,73 +364,49 @@
                </button>
                <input type="hidden" name="_captcha" value="false" />
                <input type="text" name="_honey" style="display: none" />
-               <input type="hidden" name="_next" value="https://jos3ph1205.github.io/illdy/thanks" />
+               <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks" />
             </form>
          </section>
          <footer class="main-padding">
             <div class="footer-container">
                <div class="products-container col">
                   <div class="title">Products</div>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Our Work
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Club
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> News
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Announcement
-                  </p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Our Work</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Club</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> News</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Announcement</p>
                </div>
                <div class="information-container col">
                   <div class="title">Information</div>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Pricing
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Terms
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Affiliates
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Blog
-                  </p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Pricing</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Terms</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Affiliates</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Blog</p>
                </div>
                <div class="support-container col">
                   <div class="title">Support</div>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Documentation
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> FAQs
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Forums
-                  </p>
-                  <p>
-                     <i class="fa-solid fa-chevron-right"></i> Contact
-                  </p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Documentation</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> FAQs</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Forums</p>
+                  <p><i class="fa-solid fa-chevron-right"></i> Contact</p>
                </div>
             </div>
             <div class="socials-container">
                <div class="links">
-               <a href="https://github.com/jos3ph1205" target="me">
-                  <i class="fa-brands fa-github"></i>
-               </a>
-               <a href="https://codepen.io/Joseph_1205" target="me">
-                  <i class="fa-brands fa-codepen"></i>
-               </a>
-               <a href="https://www.freecodecamp.org/jos3ph_1205" target="me">
-                  <i class="fa-brands fa-free-code-camp"></i>
-               </a>
-               <a href="https://jos3ph1205.github.io/portfolio" target="me">
-                  <i class="fa-solid fa-address-card"></i>
-               </a>
-            </div>
-            <p>© 2024 Sharvin Joseph Emmanuel | All Rights Reserved</p>
+                  <a href="https://github.com/jos3ph1205" target="me">
+                     <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="https://codepen.io/Joseph_1205" target="me">
+                     <i class="fa-brands fa-codepen"></i>
+                  </a>
+                  <a href="https://www.freecodecamp.org/jos3ph_1205" target="me">
+                     <i class="fa-brands fa-free-code-camp"></i>
+                  </a>
+                  <a href="https://jos3ph1205.github.io/portfolio" target="me">
+                     <i class="fa-solid fa-address-card"></i>
+                  </a>
+               </div>
+               <p>© 2024 Sharvin Joseph Emmanuel | All Rights Reserved</p>
             </div>
          </footer>
       </main>
